# My_CV_Project

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  setup.py
scripts/: run.bat
src/: __init__.py  bot_controller.py  data_provider.py  main.py  offline_data.py  utils.py  vision_core.py
